--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,5 +1,59 @@
 @charset "UTF-8";
 
 *{
-    
+    margin: 0px;
+    padding: 0px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
 }
+
+body,html{
+    background-color: rgb(141, 139, 139);
+    height: 100vh;
+    width: 100vw;
+}
+        
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+#login{
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% ,-50%);
+    background-color: rgba(254, 254, 255, 0.596);
+    width: 250px;
+    height: 500px;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.356);
+    transition: width 0.5s , heigth 0.5s;
+    transition-timing-function: ease;
+}
+
+#imagem{
+    display: block;
+    background-image: url('../imagens/img\ para\ login.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 200px;
+    width: 250px;
+}
+
+#formulario{
+    padding: 20px;
+
+}
+
+h1{
+    text-align: center;
+}
+
+p{
+    text-align: justify;
+}
+
