--- a/estilos/media.css
+++ b/estilos/media.css
@@ -25,11 +25,23 @@
         float: right;
         width: 65%;
     }
+
+    p{
+        font-size: 1em;
+    }
 }
 
 @media screen and (min-width: 1000px){
     body{
         background-image: linear-gradient(to bottom,gray,rgba(0, 0, 0, 0.568) );
+    }
+
+    p{
+        font-size: 1.2em;
+    }
+    h1{
+
+    font-size: 2em;
     }
     
     
@@ -38,13 +50,13 @@
     }
 
     #imagem{
-        float: left;
+        float: right;
         width:50%;
         height: 100%;
     }
 
     #formulario{
-        float: right;
+        float: left;
         width: 50%;
     }
 }
