--- a/estilos/style.css
+++ b/estilos/style.css
@@ -12,7 +12,7 @@ body,html{
     height: 100vh;
     width: 100vw;
 }
-        
+
 main{
     position: relative;
     height: 100vh;
@@ -51,9 +51,13 @@ main{
 
 h1{
     text-align: center;
+    margin-bottom: 10px;
+    
 }
 
 p{
     text-align: justify;
+    font-size: 0.8em;
+
 }
 
