--- a/estilos/media.css
+++ b/estilos/media.css
@@ -10,13 +10,15 @@
     
 
     #login{
+        height: 400px;
         width: 80vw;
+        max-width: 950px;
 
     }
 
     #imagem{
         float: left;
-        width: 30%;
+        width: 35%;
         height: 100%;
         
     }
@@ -26,12 +28,48 @@
         width: 65%;
     }
 
+    h1{
+        margin-top: 10px;
+    }
+    
+
     p{
+        margin-top: 30px;
         font-size: 1em;
     }
+
+    .campo{
+        margin-top: 10px;
+    }
+
+    input{
+        margin-top: 15px;
+        padding: 5px;
+        width: 250px;
+        height: 100%;
+        border-radius: 5px;
+        border:none;
+    }
+
+
+
+    #entrar{
+        margin-top:28px;
+        display: inline-block;
+        width: 49vw;
+    }
+
+    a{
+        font-size: 1em;
+        display: inline-block;
+        width: 49vw;
+        
+    }
+
+    
 }
 
-@media screen and (min-width: 1000px){
+@media screen and (min-width: 992px){
     body{
         background-image: linear-gradient(to bottom,gray,rgba(0, 0, 0, 0.568) );
     }
@@ -40,23 +78,53 @@
         font-size: 1.2em;
     }
     h1{
-
     font-size: 2em;
     }
     
     
     #login{
-        width: 950px;
+        width: 970px;
+        height: 500px;
     }
 
     #imagem{
-        float: right;
-        width:50%;
+        float: left;
+        width:48%;
         height: 100%;
     }
 
     #formulario{
-        float: left;
+        margin-top: 20px;
+        float: rigth;
         width: 50%;
+        height: 40%;
     }
+
+    input{
+        margin-top: 45px;
+        padding: 5px;
+        width: 300px;
+        height: 100%;
+        border-radius: 5px;
+        border:none;
+    }
+    
+    a{
+        font-size: 0.8em;
+        text-align: center;
+        display: inline-block;
+        width: 35vw;
+        padding: 5px;
+    }
+
+
+    #entrar{
+        display: inline-block;
+        width: 35vw;
+        margin-top: 30px;
+        
+        
+          
+    }
+
 }
