--- a/estilos/style.css
+++ b/estilos/style.css
@@ -27,7 +27,7 @@ main{
     transform: translate(-50% ,-50%);
     background-color: rgba(254, 254, 255, 0.596);
     width: 250px;
-    height: 500px;
+    height: 510px;
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.356);
@@ -52,8 +52,10 @@ main{
 h1{
     text-align: center;
     margin-bottom: 10px;
-    
+    background-color: rgba(255, 255, 255, 0.603);
+    border-radius: 5px;
 }
+    
 
 p{
     text-align: justify;
@@ -61,3 +63,59 @@ p{
 
 }
 
+input{
+    padding: 5px;
+    width: 180px;
+    height: 100%;
+    border-radius: 5px;
+    border:none;
+}
+
+
+a{
+    text-align: center;
+    display: block;
+    text-decoration: none;
+    border: 1px solid black;
+    font-size: 1em;
+    color: black;
+    background-color: rgb(29, 149, 248);
+    padding-bottom: 6px;
+    border: none;
+    width:90%;
+    margin-left:10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    color: whitesmoke;
+    font-weight: bold;
+    font-size: 1em;
+}
+
+a:hover{
+    background-color: rgb(14, 109, 187);
+    transition: 0.5s;
+}
+
+
+
+#entrar{
+    display: block;
+    font-size: 1em;
+    width: 90%;
+    margin-left: 10px;
+    height: 30px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    background-color: rgb(29, 149, 248);
+    font-weight: bold;
+    color: whitesmoke;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 1px;
+}
+
+#entrar:hover{
+    background-color: rgb(14, 109, 187);
+    transition: 0.5s;
+}
